--- a/src/App.css
+++ b/src/App.css
@@ -5,4 +5,7 @@
 
 body {
 	font-family: "Oxygen", sans-serif;
+	background-image: linear-gradient(45deg, #2193b0, #6dd5ed);
+	margin: 0;
+	background-attachment: fixed;
 }
