--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 @tailwind utilities; */
 
 body {
-	font-family: "Oxygen", sans-serif;
+	font-family: "Oxygen", sans-serif !important;
 	background-image: linear-gradient(45deg, #2193b0, #6dd5ed);
 	margin: 0;
 	background-attachment: fixed;
