--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,9 @@
 
 body {
 	font-family: "Oxygen", sans-serif !important;
-	background-image: linear-gradient(45deg, #2193b0, #6dd5ed);
+	/* background-image: linear-gradient(45deg, #2193b0, #6dd5ed); */
+	background-image: linear-gradient(45deg, #2b4499, #6dd5ed);
+
 	margin: 0;
 	background-attachment: fixed;
 }
