--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400&display=swap");
-/* @tailwind base;
-@tailwind components;
-@tailwind utilities; */
-
 body {
 	font-family: "Oxygen", sans-serif !important;
 	/* background-image: linear-gradient(45deg, #2193b0, #6dd5ed); */
@@ -10,4 +6,7 @@ body {
 
 	margin: 0;
 	background-attachment: fixed;
+}
+logo-button {
+	text-transform: none !important;
 }
